fix: add top margin to first form field in note editor dialog
Add 8px top margin to the first form field (Name) to prevent the label from being cut off at the top of the dialog content area.

--- a/src/app/pages/tm/components/note-editor-dialog/note-editor-dialog.component.scss
+++ b/src/app/pages/tm/components/note-editor-dialog/note-editor-dialog.component.scss
@@ -4,6 +4,10 @@
 
 .full-width {
   width: 100%;
+
+  &:first-child {
+    margin-top: 8px;
+  }
 }
 
 .markdown-toolbar {
